# maale_warehouse

./: .replit  DATABASE_MIGRATION.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_SAFELY.md  GITHUB_PAGES_SOLUTION.md  NETLIFY_DEPLOY_GUIDE.md  Procfile  QUICK_DEPLOY_GUIDE.txt  RAILWAY_DEPLOY_GUIDE.md  RAILWAY_STEP_BY_STEP.md  RENDER_DEPLOY_GUIDE.md  SIMPLE_DEPLOY_SOLUTION.md  VERCEL_DEPLOY_GUIDE.md  VERCEL_FRONTEND_ONLY.md  VERCEL_STEP_BY_STEP.md  YOUR_DATABASE_DETAILS.md  analyze_excel.py  auth.py  check_db.py  create_admin.py  database.py  deploy.sh  deploy_now.sh  excel_handler.py  excel_structure.txt  main.py  package-lock.json  package.json  production_server.js  pyproject.toml  railway.json  replit.md  server.js  simple_server.js  start.sh  utils.py  טופס השאלת ציוד לשלוחה החרדית  ב.xlsx
.streamlit/: config.toml  custom.css  style.css
api/: auth.py  main.py  models.py
attached_assets/: Pasted--Figma-Replit-1-API--1743915360004.txt  Pasted--class-plotly-graph-objects-layout-Activeselection-instance-or-dict-with-compatible-properties-ac-1743683231885.txt  Pasted--div-style-width-1440-height-1024-position-relative-background-FAFBFF-div-style--1744013073014.txt  Pasted--div-style-width-1440px-height-1024px-position-relative-background-FAFBFF-div-style-w-1743953930484.txt  Pasted-Download-the-React-DevTools-for-a-better-development-experience-https-react-dev-link-react-devtoo-1751214208030_1751214208031.txt  Pasted-Running-build-in-Washington-D-C-USA-East-iad1-Build-machine-configuration-2-cores-8-GB-Clon-1751827264638_1751827264640.txt
components/: alerts.py  history.py  (+5 more)
(+125 files in other folders)
