[project]
name = "repl-nix-cinemawarehousemanager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "streamlit>=1.40.2",
    "werkzeug>=3.1.3",
    "xlrd>=2.0.1",
]
